# EduTrack-Hub-Curriculum-generator

./: .gitignore  EXECUTION_PROTOCOL.md  PHASE6_REPORT.md  README.md  README_PHASE2.md  RELEASE_GATE_REPORT.md  REPOSITORY_ANALYSIS.md  app.py  check_imports.py  debug_import.py  diagnose_search.py  edu_track_engine_execution_blueprint.md  pyproject.toml  requirements.txt
.agent/workflows/: deploy-streamlit.md
.streamlit/: secrets.toml.example
app_additions/: admin_pending_ui.py  app_ingest_ui.py  resource_generation_ui.py
config/: kill_test_thresholds.py
migrations/: 03_add_ingestion_columns.sql  04_add_standardized_tables.sql  05_add_generation_jobs.sql  sqlite_03_add_ingestion_columns.sql
scripts/: 01_create_tables.sql  02_seed_data.sql  03_db_readonly_role_setup.sql  db_readonly_role_setup.sql  provision_role.py  run_release_gates.py  verify_db.py  verify_router.py
scripts/debug/: check_imports.py  debug_search.py
src/: __init__.py
src/agents/: __init__.py  architect.py  embedder.py  gatekeeper.py  scout.py
src/api/: __init__.py  admin_api.py  app.py  auth.py  generation_api.py  generation_jobs.py  generation_service.py  generator_api.py  generator_auth.py  hub_api.py  main.py
src/app_additions/: generation_mapping.py
src/ingestion/: __init__.py  api.py  extractor.py  gatekeeper.py  llm_client.py  parser.py  schemas.py  search.py  search_api.py  search_provider.py  services.py  standardizer.py  tagger.py  utils.py  worker.py
src/orchestrator/: __init__.py  graph.py  nodes.py  state.py
src/production/: __init__.py  circuit_breaker.py  data_access.py  embeddings.py  errors.py  governance.py  grounding.py  harness.py  resource_storage.py  security.py  service_adapter.py  shadow.py  topic_extraction.py
src/release/: canary.py
src/schemas/: __init__.py  agents.py  base.py  curriculum.py  generation.py  jurisdiction.py  request.py  vault.py
src/security/: __init__.py  request_signing.py
src/synthetic/: __init__.py  auto_investigation.py  embeddings.py  extraction_tests.py  generator.py  governance.py  harness.py  matcher.py  multilingual.py  omission_severity.py  pdf_simulation.py  schemas.py  shadow_diff.py  telemetry.py
src/utils/: __init__.py  gemini_client.py  model_router.py  validation.py
tests/: __init__.py  conftest.py
tests/api/: test_generation_api.py  test_generator_api.py  test_main.py
tests/fixtures/: generate_sample_pdf.py
tests/ingestion/: conftest.py  test_extractor.py  test_gatekeeper.py  test_imports.py  test_job_lifecycle.py  test_parser.py  test_request_signing.py  test_search_api.py  test_standardizer.py  test_tagger.py
tests/integration/: __init__.py  test_hub_submit_poll_save.py  test_production_harness.py  test_real_api.py
tests/kill_tests/: conftest.py  test_p0_hallucination.py  test_p0_truth.py  test_p1_governance.py  test_p1_shadow_persistence.py  test_p2_p3_operational.py
tests/services/: test_resource_save.py  test_store_curriculum_idempotent.py  test_store_snapshot.py
tests/unit/: __init__.py  (+21 more)
(+1 files in other folders)
